Fixed two of the discussion issues